[tool.poetry]
name = "django-storefront"
version = "0.1.0"
description = ""
authors = ["Ido Meisner <ido.meisner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-debug-toolbar = "^4.2.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
